language/move-lang/tests/move_check/parser/invalid_pack_mname_non_addr.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/invalid_pack_mname_non_addr.move:4:14
  │
4 │         false::M::S { }
  │              ^^
  │              │
  │              Unexpected '::'
  │              Expected ';'

